autumn/tests/compile-fail/routes_nonexistent.rs
use autumn_web::routes;

fn main() {
    let _ = routes![nonexistent_handler];
}
